tests/machine/x/c/group_items_iteration.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_items_iteration.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:143:23: error: incompatible types when assigning to type ‘int’ from type ‘struct <anonymous>’
  143 |     tmp7.data[tmp8] = g;
      |                       ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:154:41: error: request for member ‘len’ in something not a structure or union
  154 |   list_int tmp13 = list_int_create(tmp12.len);
      |                                         ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:155:49: error: request for member ‘len’ in something not a structure or union
  155 |   int *tmp16 = (int *)malloc(sizeof(int) * tmp12.len);
      |                                                 ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:157:36: error: request for member ‘len’ in something not a structure or union
  157 |   for (int tmp15 = 0; tmp15 < tmp12.len; tmp15++) {
      |                                    ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:158:18: error: request for member ‘data’ in something not a structure or union
  158 |     int r = tmp12.data[tmp15];
      |                  ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:160:21: error: request for member ‘tag’ in something not a structure or union
  160 |     tmp16[tmp14] = r.tag;
      |                     ^

   1: #include <stdio.h>
